# piscinePython

./: .gitignore
Py00/: .gitignore
Py00/ex00/: Hello.py
Py00/ex01/: format_ft_time.py
Py00/ex02/: find_ft_type.py
Py00/ex03/: NULL_not_found.py
Py00/ex04/: whatis.py
Py00/ex05/: building.py
Py00/ex06/: filterstring.py  ft_filter.py
Py00/ex07/: sos.py
Py00/ex08/: Loading.py
Py00/ex09/: README.md  pyproject.toml
Py00/ex09/src/ft_package/: Loading.py
Py00/ex09/tests/: tester.py
Py01/ex00/: give_bmi.py
Py01/ex01/: array2D.py
Py01/ex02/: load_image.py
Py01/ex03/: load_image.py  zoom.py
Py01/ex04/: load_image.py  rotate.py
Py01/ex05/: load_image.py  pimp_image.py  tester.py
Py02/: .gitignore
Py02/ex00/: load_csv.py
Py02/ex01/: aff_life.py
Py02/ex02/: aff_pop.py  load_csv.py
Py02/ex03/: load_csv.py  projection_life.py
Py03/ex00/: S1E9.py  tester.py
Py03/ex01/: S1E7.py
Py03/ex02/: DiamondTrap.py
Py03/ex03/: ft_calculator.py
Py03/ex04/: ft_calculator.py
