[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "ft_package"
version = "0.0.1"
authors = [
  { name="mhaouas", email="mhaouas@student.42angouleme.fr" },
]
description = "ft_package for the ex09 of the day00 for the Python Pool of 42 School."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.hatch.build.targets.wheel]
packages = ["src/ft_package"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
